2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esdfilt.c: (main): add informative output to -double, similar 
          to that of -half.

2008-11-18  Josselin Mouette <joss@malsain.org>

	* esd-server.h: add missing sys/un.h header.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* proto.c: (esd_proto_stream_recorder): replace the 1 s sleeps, 
        which are here to work around a bug in the kernel, by 100 µs 
        ones, which will be enough.

2008-11-18  Josselin Mouette  <joss@malsain.org>

	* esdfile.c: (esd_play_file): accept file formats supported by 
        libaudiofile.
	* configure.ac: require libaudiofile 0.2.3 which adds support 
        for them.

============================== 0.2.40 ===========================

2008-09-03  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Release 0.2.40

	* NEWS: updated

2008-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* esdlib.c (write_timeout): Check for the existence of POLLERR or
	POLLHUP first. If either is set, abort the write(). We can't
	assume that POLLOUT won't be set if a hang-up occurred.
	(write_timeout): Abort on all write() errors other than EINTR.

2008-07-29  Jeffrey Stedfast  <fejj@novell.com>

	* audio_oss.c: #include <errno.h>. Fixes bug #543239

============================== 0.2.39 ===========================

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Release 0.2.39

	* NEWS: updated

	* esdlib.c Update all code to use new read/write/connect wrappers
	that abort if the operation takes too long and/or the other end
	drops the connection. Fixes bug #542391.
	(read_timeout): New function to abort a read() if it takes too
	long and/or if the other end drops the connection.
	(write_timeout): Same idea here.
	(connect_timeout): Same.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* audio_alsa09.c: Suppress verbose error messages from ALSA. Patch
	by Stanislav Brabec to fix bug #528718.

2008-07-15  Jeffrey Stedfast  <fejj@novell.com>
